# ElementaryCellularAutomaton

./: CMakeLists.txt  CellularAutomaton.pro  README.md  compile.sh  eca.cpp  eca.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
